Fix wrong margin value

--- a/styles/grid.css
+++ b/styles/grid.css
@@ -14,7 +14,7 @@
 }
 
 .grid--very-tight {
-  margin-right: 1rem;
+  margin-right: -1rem;
 }
 
 .grid__cell {
